--- a/app/views/main.html
+++ b/app/views/main.html
@@ -14,6 +14,7 @@
       <ul class="nav navbar-nav">
         <li class="active"><a href="#">Home</a></li>
         <li><a href="#about">About</a></li>
+        <li><a href="#about">Add Feed...</a></li>
       </ul>
     </div>
   </div>
@@ -24,37 +25,55 @@
   <div class="row">
 
     <section ng-controller="MainCtrl" id="feeds-wrap" class="col-xs-12">
+      <div ng-repeat="feed in feeds" class="feed panel panel-primary">
 
-      <div class="feed panel panel-default">
         <div class="panel-heading">
-          <button type="button" class="btn btn-default btn-xs" title="Delete feed">
-            <span class="glyphicon glyphicon-remove"></span>
-          </button>
-          <button type="button" class="btn btn-default btn-xs" title="Collapse feed">
-            <span class="glyphicon glyphicon-minus"></span>
-          </button>
-          <button type="button" class="btn btn-default btn-xs" title="Change options for feed">
-            <span class="glyphicon glyphicon-cog"></span>
-          </button>
-          <h3 class="panel-title">/r/subredditName</h3>
+          <ul class="feed-menu">
+            <button type="button" class="btn btn-primary btn-xs" title="Change feed options">
+              <span class="glyphicon glyphicon-cog"></span>
+            </button>
+            <button type="button" class="btn btn-primary btn-xs" title="Collapse feed">
+              <span class="glyphicon glyphicon-minus"></span>
+            </button>
+            <button type="button" class="btn btn-primary btn-xs" title="Expand feed">
+              <span class="glyphicon glyphicon-plus"></span>
+            </button>
+            <button type="button" class="btn btn-primary btn-xs" title="Delete feed">
+              <span class="glyphicon glyphicon-remove"></span>
+            </button>
+          </ul>
+          <h3 class="panel-title">
+            <a href="http://reddit.com/r/{{feed.sr}}">/r/{{feed.sr}}</a>
+          </h3>
         </div>
-        <ul class="feed-list list-group">
-          <li ng-repeat="sub in subs" class="list-group-item">
-            <span class="badge label-success">new</span>
-            {{sub.data.title}}
+
+        <div class="feed-options">
+          <form>
+            <input type='text' ng-model='submissionSearch'>
+            <input type='submit'>
+          </form>
+        </div>
+
+        <ul class="feed-item-list list-group">
+          <li ng-repeat="sub in feed.submissions | filter:submissionSearch" class="list-group-item">
+            <span class="badge badge-success">new</span>
+            <a href={{sub.data.url}}>{{sub.data.title}}</a>
             <!-- <p>{{sub.data.selftext}}</p> -->
           </li>
         </ul>
-      </div>
 
+      </div>
     </section>
 
   </div>
 </div>
 
 <!-- Footer information -->
-<footer>
-  <div class="container">
-    <p class="text-muted pull-right">Created by Alex Nakorn</p>
-  </div>
-</footer>
+<div class="container">
+  <footer class="footer">
+    <hr />
+    <p class="text-muted pull-right">
+      <a href="http://github.com/rainakorn">me</a> &copy; 2013
+    </p>
+  </footer>
+</div>
