--- a/app/views/main.html
+++ b/app/views/main.html
@@ -11,7 +11,7 @@
       </button>
       <a class="navbar-brand" href="#">rka</a>
     </div>
-    <div class="navbar-collapse collapse">
+    <div class="navbar-collapse collapse" role="navigation">
       <ul class="nav navbar-nav">
         <li class="active"><a href="#">Home</a></li>
         <li><a href="#about">About</a></li>
